// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test subject modal reducer should close subject modal 1`] = `
Object {
  "id": "L0EWvgOlqFDKYrVs",
  "showSubjectModal": false,
}
`;

exports[`test subject modal reducer should open subject modal 1`] = `
Object {
  "id": "L0EWvgOlqFDKYrVs",
  "showSubjectModal": true,
}
`;

exports[`test subject modal reducer should update subject modal 1`] = `
Object {
  "id": "L0EWvgOlqFDKYrVs",
  "showSubjectModal": false,
}
`;

exports[`test subject modal reducer should use default subject modal state 1`] = `
Object {
  "id": "",
  "showSubjectModal": false,
}
`;
